Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4820

QS60Style does not mix well with the stylesheets

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.0
    • 4.6.0
    • None
    • None
    • da9880eaed0d09338717db1a73db01e6b0ab080d

      If stylesheet is applied to application having QS60Style active, some parts of the stylesheet are ignored.

      At least buttons and spinboxes are showing default theme graphics, instead of stylesheet graphics.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            samimeri Sami Merila (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes