QS60Style does not mix well with the stylesheets

QS60Style basically ignores user set / stylesheet set palettes.
Now, tested with:
   * QLineEdit
   * QPushButton
   * QSpinBox
   * QComboBox
   * QAbstractScrollArea
   * QCheckBox
   * QRadioButton
   * QGroupBox
   * QFrame
   * QTreeView
   * QTableView
   * QHeaderView
   * QProgressBar
   * QScrollBar
   * QSplitter
   * QSlider
   * QTabWidget
   * QToolButton
   * QToolBar
and fixed QS60Style so that it obeys externally set palettes.

Task-number: QTBUG-4820
Reviewed-by: Janne Koskinen